Add weight to Action limits
