# core/controller/src/main/resources/apiv1swagger.json
@@ -1791,6 +1791,12 @@
           "format": "int32",
           "description": "number of concurrent activations allowed",
           "default": 1
+        },
+        "weight": {
+          "type": "integer",
+          "format": "int32",
+          "description": "weight of the action",
+          "default": 8
         }
       }
     },
